style.css
:root {
    --white: #fff;
    --active: #ddd;
    --black: black;
    --shadow: rgba(0, 0, 0, 0.8);
    --card: rgb(74, 74, 74);
  }

/* BODY */
    body {
        /* https://www.freepik.com/free-photo/black-abstract-background-wallpaper-image_16250130.htm#query=dark%20website%20background&position=33&from_view=keyword&track=ais_hybrid&uuid=d5b11923-8311-4460-9add-d4a3aaa3bd31 */
        background-image: url(images/black-abstract-background-wallpaper-image.jpg);
        background-repeat: no-repeat;
        background-attachment: fixed;
        background-size: cover;
    }

/* HEADER */
    .header {
        font-family: 'Outfit';
        font-weight: bold;
        overflow: hidden;
        padding: 20px 30px;
    }

    /* HEADER LINKS */
    .header a {
        float: left;
        color: rgb(255, 255, 255);
        text-align: center;
        padding: 5px 20px;
        text-decoration: none;
        font-size: 18px;
        line-height: 25px;
        border-radius: 4px;
        transition: transform 0.3s ease;
    }

    /* LINK HOVER */
    .header a:hover {
        transform: scale(1.1);
    }

    /* ACTIVE LINK */
    .header a.active {
        background-color: #ddd;
        color: black;
    }

    /* RIGHT ALIGN LINKS */
    .header-right {
        float: right;
    }

    /* when the screen is 500px wide or less, stack the links on top of each other */
    @media screen and (max-width: 500px) {
        .header a {
        float: none;
        display: block;
        text-align: left;
        }
        .header-right {
        float: none;
        }
    }

/* MAIN */
    .main {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 80vh;
        color: white;
        font-family: 'Playfair Display';
        margin-top: 60px; 
    }

    .main h1 {
        font-size: 90px;
        font-weight: normal;
        margin: 0;
        text-align: center;
        text-shadow: 5px 5px 3px rgba(0, 0, 0, 0.8);
    }
    .main h2 {
        font-size: 50px;
        font-weight: normal;
        margin: 0;
        text-align: center;
        text-shadow: 2px 3px 3px rgba(0, 0, 0, 0.8);
    }
    .main p {
        font-size: 20px;
        font-weight: normal;
        margin: 0;
        text-align: center;
    }

    .main .intro {
        text-align: center;
    }

    .main img {
        margin-top: 20px;
    }

    .social-links {
        display: flex;
        justify-content: center;
        list-style-type: none;
        padding: 0;
    }

    .social-links li {
        margin: 0 10px;
    }

    .social-links a img {
        width: 40px;
        height: 40px;
        border-radius: 50%;
        object-fit: cover;
        transition: transform 0.3s ease;
    }

    .social-links a img:hover {
        transform: scale(1.2);
    }

    .pfp {
        box-shadow:2px 2px 30px rgb(0, 0, 0);
        border-radius: 50%;
    }

/* PROJECT SCROLLER */
    .container {
        max-width: 1400px;
        padding: 0 15px;
        margin: 0 auto;
    }

    .cards {
        display: flex;
        padding: 25px 0px;
        list-style: none;
        overflow-x: scroll;
        scroll-snap-type: x mandatory;
    }

    .card {
        display: flex;
        flex-direction: column;
        flex: 0 0 100%;
        padding: 70px;  
        background: var(--card);
        border-radius: 12px;
        box-shadow: 0 5px 15px var(--shadow);
        scroll-snap-align: start;
        transition: all 0.3s;
    }

    .card:not(:last-child) {
        margin-right: 10px;
    }

    .card:hover {
        transform: scale(1.05);
    }

    .card .card-title {
        font-size: 20px;
    }

    .card .card-content {
        margin: 20px 0;
        max-width: 85%;
    }

    .card .card-link-wrapper {
        margin-top: auto;
    }

    .card .card-link {
        display: inline-block;
        text-decoration: none;
        color: white;
        background: rgb(89, 89, 89);
        padding: 6px 12px;
        border-radius: 8px;
        transition: background 0.2s;
    }

    .card-link:hover {
        background: rgb(187, 187, 187);
    }

    .cards::-webkit-scrollbar {
        height: 12px;
    }

    .cards::-webkit-scrollbar-thumb,
    .cards::-webkit-scrollbar-track {
        border-radius: 92px;
    }

    .cards::-webkit-scrollbar-thumb {
        background: black;
    }

    .cards::-webkit-scrollbar-track {
        background: grey;
    }

    .project-img {
        box-shadow:2px 2px 30px var(--shadow);
    }

    @media (min-width: 500px) {
        .card {
        flex-basis: calc(50% - 10px);
        }

        .card:not(:last-child) {
        margin-right: 20px;
        }
    }

    @media (min-width: 700px) {
        .card {
        flex-basis: calc(calc(100% / 3) - 20px);
        }

        .card:not(:last-child) {
        margin-right: 30px;
        }
    }

    @media (min-width: 1100px) {
        .card {
        flex-basis: calc(25% - 30px);
        }

        .card:not(:last-child) {
        margin-right: 40px;
        }
    }

/* ABOUT PAGE */
    .columns {
        display: flex;
        align-items: flex-start; /* Align items to the top initially */
    }

    /* Left column taking 3/4 of the page */
    .left-column {
        flex: 3;
        padding: 20px;
        overflow-y: auto; /* Enable scrolling if content overflows */
    }

    /* Right column taking 1/4 of the page */
    .right-column {
        flex: 1;
        padding: 20px;
        position: sticky;
        top: 50%; /* Start sticky positioning 50% from the top */
        transform: translateY(-10%); /* Center the iframe vertically */
        height: fit-content;
    }

    /* Optional styling for the content */
    .left-column p {
        margin-bottom: 20px;
        line-height: 1.6;
    }

